# trading-engine-core

./: .gitignore  .releaserc.yml  CHANGELOG.md  LICENSE  README.md  pyproject copy.toml  pyproject.toml  python-publish.yml
.github/workflows/: debug-publish.yml  publish-to-gpr.yml  python-publish.yml
src/: models.py
src/trading_engine_core/: enums.py  models.py  risk.py
src/trading_engine_core/ohlc/: manager.py  transformer.py
tests/: test_enums.py  test_manager.py  test_models.py  test_protocols.py  test_transformer.py
tests/trading_engine_core/: test_models.py
tests/trading_engine_core/ohlc/: test_transformer.py
