# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-engine-core"
version = "0.2.6"
authors = [
    { name = "Trading Systems Team", email = "ven.ajie@protonmail.com" },
]
description = "Core data contracts, models, and protocols for the trading engine."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru==0.7.2",
    "pydantic==2.12.5",
]

[project.urls]
"Homepage" = "https://github.com/venoajie/trading-engine-core"
"Repository" = "https://github.com/venoajie/trading-engine-core"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "python-semantic-release>=9.0",
    "build>=1.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
branch = "main"
upload_to_repository = false
upload_to_release = true
major_on_zero = true

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
