# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-engine-core"
version = "0.3.6"
authors = [
    { name = "Trading Systems Team", email = "ven.ajie@protonmail.com" },
]
description = "Core data contracts, models, and protocols for the trading engine."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru==0.7.2",
    "pydantic==2.12.5",
]

[project.urls]
"Homepage" = "https://github.com/venoajie/trading-engine-core"
"Repository" = "https://github.com/venoajie/trading-engine-core"

# Specifies the directory where the package source code resides.
[tool.setuptools.packages.find]
where = ["src"]

# Defines optional dependencies for development, testing, and releasing.
# These are installed by `pip install -e .[dev]` in the CI pipeline.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4",
    "build>=1.0",
]

# Configuration for the Ruff linter and formatter.
[tool.ruff]
line-length = 150
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Configuration for Pytest.
[tool.pytest.ini_options]
# pythonpath: critical for 'src' layout to allow 'import trading_shared'
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
# asyncio_mode: auto-detects async tests
asyncio_mode = "auto"